--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "firebase": "^9.6.7",
     "nodemon": "^2.0.15"
   }
 }
