--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase": "^9.6.7",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pdf-creator-node": "^2.3.4"
   }
 }
