--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "firebase": "^9.6.7",
     "nodemon": "^2.0.15",
-    "pdf-creator-node": "^2.3.4"
+    "pdf-creator-node": "^2.3.4",
+    "twilio": "^3.75.0"
   }
 }
